--- a/media.html
+++ b/media.html
@@ -51,7 +51,6 @@
               <li><a class="c-nav__link" href="index.html">الرئيسية</a></li>
               <li><a class="c-nav__link" href="media.html">الوسائط</a></li>
               <li><a class="c-nav__link" href="timeline.html">الخط الزمني</a></li>
-              <li><a class="c-nav__link" href="biography.html">السيرة</a></li>
               <li><a class="c-nav__link" href="news.html">الأخبار</a></li>
               <li><a class="c-nav__link" href="about.html">من نحن</a></li>
             </ul>
@@ -98,7 +97,6 @@
           <li><a class="c-nav__link" href="index.html">الرئيسية</a></li>
           <li><a class="c-nav__link" href="media.html">الوسائط</a></li>
           <li><a class="c-nav__link" href="timeline.html">الخط الزمني</a></li>
-          <li><a class="c-nav__link" href="biography.html">السيرة</a></li>
           <li><a class="c-nav__link" href="news.html">الأخبار</a></li>
           <li><a class="c-nav__link" href="about.html">من نحن</a></li>
         </ul>
@@ -961,7 +959,6 @@
               <li><a href="timeline.html">الخط الزمني</a></li>
               <li><a href="media.html">الوسائط</a></li>
               <li><a href="news.html">الأخبار</a></li>
-              <li><a href="biography.html">السيرة</a></li>
               <li><a href="about.html">من نحن</a></li>
               <li><a href="contact.html">تواصل</a></li>
             </ul>
@@ -1090,7 +1087,7 @@
             </section>
 
             <!-- Right: Details -->
-            <aside class="c-reels-side" aria-label="تفاصيل الريل">
+            <!-- <aside class="c-reels-side" aria-label="تفاصيل الريل">
               <header class="c-reels-side__head">
                 <span class="c-reels-side__badge">
                   <i class="fa-solid fa-video" aria-hidden="true"></i>
@@ -1145,7 +1142,7 @@
                 </section>
 
               </div>
-            </aside>
+            </aside> -->
 
           </div>
         </div>
